clusters/hetzner/yopass/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yopass
  labels:
    name: yopass
