clusters/hetzner/yopass/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yopass
  namespace: yopass
  labels:
    app: yopass
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - secrets.codextechnologies.org
      secretName: yopass-tls
  rules:
    - host: secrets.codextechnologies.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yopass
                port:
                  number: 80
